2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Simplify engine management.

	* src/ftview.c (Process_Event): Use `FTDemo_Hinting_Engine_Change'.
	(main): Remove engine accounting.

2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Simplify engine management.

	* src/ftview.c (Process_Event): Use `FTDemo_Hinting_Engine_Change'.
	(write_header): Do not report engine and reformat to make more room.
	(main): Remove engine accounting.

2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Universal hinting engine switch.

	* src/ftcommon.[ch] (FTDemo_Hinting_Engine_Change): Implement it.
	(FTDemo_Get_Info): Minor.

2020-11-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Get_Info): Simplify the code.

2020-11-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmemchk.c: Remove internal dependency.

2020-11-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Revert 6ef15ce5aecc, FT_UNUSED is public again.

	* mac/ftoldmac.c, src/ftbench.c, src/ftchkwd.c, src/ftcommon.c:
	Do not need `compiler-macros.h'.

2020-11-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Add hinting info to the standard header.

	* src/ftcommon.c (FTDemo_Get_Info): Extract some driver settings.
	(FTDemo_Draw_Header): Report hinting and target info.

2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (Clear_Display): Use size_t.

2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftmulti,ftdiff] Fix up layout for the larger font.

	* src/ftgrid.c (DO_DOTNUMBERS): Rely on GR_FONT_SIZE.
	* src/ftmulti.c, src/ftdiff.c: Use HEADER_HEIGHT equal to 12.

2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Switch to larger 8x14 font.

	* graph/grconfig.h (GR_FONT_SIZE): New option defined as 14.
	* graph/grfont.[ch]: Add another font size.

2020-11-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (main): Enforce rgb24.
