@@ -1,5 +1,12 @@
 2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	[ftstring] Add engine management.
+
+	* src/ftview.c (Process_Event): Use `FTDemo_Hinting_Engine_Change'.
+	(event_help): Document 'H'.
+
+2020-11-13  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	[ftgrid] Simplify engine management.
 
 	* src/ftview.c (Process_Event): Use `FTDemo_Hinting_Engine_Change'.
